# opencacao

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CLAUDE_OpenCacao.md  LICENSE  Makefile  README.md  docker-compose.base-cpu.yml  docker-compose.base.yml  docker-compose.corpus.yml  docker-compose.cpu.yml  docker-compose.training.yml  docker-compose.web.yml  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/app/: __init__.py  api_deps.py  main.py
api/app/application/: __init__.py  auth_service.py  conseil_agentique.py  conseil_commun.py  conseil_service.py  contexte.py  dialogue_session.py  faq.py  flux.py  memoire.py  orchestrateur.py  prewarm.py  registre.py  routage.py
api/app/core/: __init__.py  auth_store.py  cache.py  config.py  email.py  journal.py  logging.py  parametres.py  security.py  sessions.py
api/tests/: conftest.py  test_analytics.py  test_api_deps.py  test_auth.py  test_auth_api.py  test_cache.py  test_chat.py  test_chat_agents.py  test_clarification.py  test_config.py  test_conseil_service.py  test_contacts.py  test_couverture.py  test_couverture_extra.py  test_curation.py  test_curation_api.py  test_decouverte.py  test_dialogue_memoire.py  test_documents.py  test_email.py  test_embeddings.py  test_enrichir.py  test_geo.py  test_guardrails.py  test_health.py  test_inference.py  test_jobs.py  test_journal.py  test_k8s.py  test_localites.py  test_memoire.py  test_notifier.py  test_parametres.py  test_pipeline.py  test_pipeline_extra.py  test_postprocess.py  test_prewarm.py  test_prompts.py  test_rag.py  test_rag_index_builder.py  (+6 more)
(+203 files in other folders)
