[project]
name = "opencacao-api"
version = "0.1.0"
description = "API FastAPI d'OpenCacao-8B — conseil agronomique cacao Côte d'Ivoire"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi==0.115.*",
    "uvicorn[standard]==0.32.*",
    "pydantic==2.*",
    "pydantic-settings==2.*",
    "httpx==0.27.*",
    "redis==5.*",
    "structlog==24.*",
    "pyyaml==6.*",
    "numpy==1.26.*",
    # Extraction de texte des PDF uploadés dans la console de curation (pure-Python).
    "pypdf==5.*",
    # Géolocalisation IP -> pays EN LOCAL (base GeoLite2), pour l'analytique des
    # visites. L'IP n'est jamais stockée : on ne garde que le code pays.
    "maxminddb==2.*",
]

[project.optional-dependencies]
dev = [
    "pytest==8.*",
    "pytest-asyncio==0.24.*",
    "pytest-cov==5.*",
    "ruff==0.6.*",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
# B008 : Depends(...) en valeur par défaut est le pattern idiomatique FastAPI.
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=97"
